Handle multiple files upload via /uploads end point. Note that /uploads end point is handle single file upload as well.
